Vista de tablas

--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -90,42 +90,42 @@
                 </li>
                 <!-- Direcciones -->
                 <li class="nav-item">
-                    <a href="crud/staff" class="nav-link">
+                    <a href="crud/adress" class="nav-link">
                         <i class="nav-icon fas fa-map-marker-alt"></i>
                         <p>Direcciones</p>
                     </a>
                 </li>
                 <!-- Categorias -->
                 <li class="nav-item">
-                    <a href="crud/categorias" class="nav-link">
+                    <a href="crud/category" class="nav-link">
                         <i class="nav-icon fas fa-th"></i>
                         <p>Categorias</p>
                     </a>
                 </li>
                 <!-- Tiendas -->
                 <li class="nav-item">
-                    <a href="crud/tiendas" class="nav-link">
+                    <a href="crud/store" class="nav-link">
                         <i class="nav-icon fas fa-store"></i>
                         <p>Tiendas</p>
                     </a>
                 </li>
                 <!-- Paises -->
                 <li class="nav-item">
-                    <a href="crud/paises" class="nav-link">
+                    <a href="crud/country" class="nav-link">
                         <i class="nav-icon fas fa-globe-americas"></i>
                         <p>Paises</p>
                     </a>
                 </li>
                 <!-- Ciudades -->
                 <li class="nav-item">
-                    <a href="crud/ciudades" class="nav-link">
+                    <a href="crud/city" class="nav-link">
                         <i class="nav-icon fas fa-city"></i>
                         <p>Ciudades</p>
                     </a>
                 </li>
                 <!-- Idiomas -->
                 <li class="nav-item">
-                    <a href="crud/idiomas" class="nav-link">
+                    <a href="crud/language" class="nav-link">
                         <i class="nav-icon fas fa-language"></i>
                         <p>Idiomas</p>
                     </a>
