--- a/src/app/post-pelicula-texto/post-pelicula-texto.component.html
+++ b/src/app/post-pelicula-texto/post-pelicula-texto.component.html
@@ -13,6 +13,9 @@
       </div>
       <div class="modal-body">
         <!-- Formulario para registrar la película texto -->
+        <div *ngIf="errorMessage" class="alert alert-danger" role="alert">
+          {{ errorMessage }}
+        </div>
         <form [formGroup]="peliculaTextoForm" (ngSubmit)="onSubmit()">
           <div class="mb-3">
             <label for="film_id" class="form-label">ID de Película</label>
