--- a/src/app/reset-password/reset-password.component.html
+++ b/src/app/reset-password/reset-password.component.html
@@ -15,7 +15,7 @@
   
       <div class="mb-3">
         <label for="resetCode" class="form-label">Código de verificación</label>
-        <input type="text" id="resetCode" class="form-control" formControlName="resetCode" maxlength="6" [ngClass]="{'is-invalid': submitted && resetForm.get('resetCode')?.invalid}" />
+        <input type="text" id="resetCode" class="form-control" formControlName="resetCode" minlength="6" [ngClass]="{'is-invalid': submitted && resetForm.get('resetCode')?.invalid}" />
         <div class="invalid-feedback" *ngIf="submitted && resetForm.get('resetCode')?.hasError('required')">
           El código es obligatorio.
         </div>
