--- a/src/app/clientes/clientes.component.html
+++ b/src/app/clientes/clientes.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid actor-table-container">
   <h2 class="mt-3 mb-4">Lista de Clientes</h2>
-  <div style="margin-bottom: 15px;"><app-post-cliente></app-post-cliente></div>
+  <div *ngIf="isAdmin" style="margin-bottom: 15px;"><app-post-cliente></app-post-cliente></div>
   <!-- Formulario de crear/editar -->
   <div *ngIf="formVisible" class="mb-4 card p-3 shadow-sm">
     <h5>{{ isEditing ? 'Editar Cliente' : 'Nuevo Cliente' }}</h5>
@@ -64,7 +64,7 @@
           <th>Dirección</th>
           <th>Tienda</th>
           <th>Activo</th>
-          <th>Acciones</th>
+          <th *ngIf="isAdmin">Acciones</th>
         </tr>
       </thead>
       <tbody>
@@ -80,7 +80,7 @@
               {{ cliente.active ? 'Sí' : 'No' }}
             </span>
           </td>
-          <td class="text-center">
+          <td class="text-center"  *ngIf="isAdmin">
             <button class="btn btn-sm btn-warning me-2" (click)="showEditForm(cliente.customer_id)">✏️</button>
             <button class="btn btn-sm btn-danger" (click)="deleteCliente(cliente.customer_id)">🗑️</button>
           </td>
