--- a/src/app/inventario/inventario.component.html
+++ b/src/app/inventario/inventario.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid actor-table-container">
     <h2 class="mt-3 mb-4">Inventario</h2>
   
-    <div class="mb-3" *ngIf="!formVisible">
+    <div class="mb-3" *ngIf="!formVisible &&  isAdmin">
       <button class="btn btn-success" (click)="showCreateForm()">➕ Nuevo Inventario</button>
     </div>
   
@@ -32,7 +32,7 @@
             <th>ID</th>
             <th>Película</th>
             <th>Tienda</th>
-            <th>Acciones</th>
+            <th *ngIf="isAdmin" >Acciones</th>
           </tr>
         </thead>
         <tbody>
@@ -40,7 +40,7 @@
             <td class="text-center">{{ inv.inventory_id }}</td>
             <td>{{ inv.film.title }}</td>
             <td class="text-center">{{ inv.store.store_id }}</td>
-            <td class="text-center">
+            <td class="text-center"  *ngIf="isAdmin">
               <button class="btn btn-sm btn-warning me-2" (click)="showEditForm(inv.inventory_id)">✏️</button>
               <button class="btn btn-sm btn-danger" (click)="delete(inv.inventory_id)">🗑️</button>
             </td>
