--- a/src/app/pagos/pagos.component.html
+++ b/src/app/pagos/pagos.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid actor-table-container">
   <h2 class="mt-3 mb-4">Pagos</h2>
-  <div style="margin-bottom: 15px;"><app-post-pago></app-post-pago></div>
+  <div *ngIf="isAdmin" style="margin-bottom: 15px;"><app-post-pago></app-post-pago></div>
   <div *ngIf="formVisible" class="mb-4 card p-3 shadow-sm">
     <h5>{{ isEditing ? 'Editar Pago' : 'Nuevo Pago' }}</h5>
     <form (ngSubmit)="save()">
@@ -42,7 +42,7 @@
           <th>Cliente</th>
           <th>Monto</th>
           <th>Fecha</th>
-          <th>Acciones</th>
+          <th *ngIf="isAdmin" >Acciones</th>
         </tr>
       </thead>
       <tbody>
@@ -51,7 +51,7 @@
           <td>{{ pago.customer.first_name }} {{ pago.customer.last_name }}</td>
           <td>${{ pago.amount }}</td>
           <td>{{ pago.payment_date | date: 'short' }}</td>
-          <td class="text-center">
+          <td class="text-center"  *ngIf="isAdmin">
             <button class="btn btn-sm btn-warning me-2" (click)="showEditForm(pago.payment_id)">✏️</button>
             <button class="btn btn-sm btn-danger" (click)="delete(pago.payment_id)">🗑️</button>
           </td>
