--- a/src/app/pelicula-actor/pelicula-actor.component.html
+++ b/src/app/pelicula-actor/pelicula-actor.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid actor-table-container">
   <h2 class="mt-3 mb-4">Película_Actor</h2>
-  <div style="margin-bottom: 15px;"><app-post-pelicula-actor></app-post-pelicula-actor></div>
+  <div *ngIf="isAdmin" style="margin-bottom: 15px;"><app-post-pelicula-actor></app-post-pelicula-actor></div>
   <div *ngIf="formVisible" class="mb-4 card p-3 shadow-sm">
     <h5>{{ isEditing ? 'Editar Relación' : 'Nueva Relación' }}</h5>
     <form (ngSubmit)="save()">
@@ -40,7 +40,7 @@
           <th>Actor</th>
           <th>Película</th>
           <th>Clasificación</th>
-          <th>Acciones</th>
+          <th *ngIf="isAdmin" >Acciones</th>
         </tr>
       </thead>
       <tbody>
@@ -48,7 +48,7 @@
           <td>{{ rel.actor.first_name }} {{ rel.actor.last_name }}</td>
           <td>{{ rel.film.title }}</td>
           <td>{{ rel.film.rating }}</td>
-          <td class="text-center">
+          <td class="text-center"  *ngIf="isAdmin">
             <button class="btn btn-sm btn-warning me-2" (click)="showEditForm(rel)">✏️</button>
             <button class="btn btn-sm btn-danger" (click)="delete(rel.actor_id, rel.film_id)">🗑️</button>
           </td>
