--- a/src/app/pelicula-categoria/pelicula-categoria.component.html
+++ b/src/app/pelicula-categoria/pelicula-categoria.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid actor-table-container">
   <h2 class="mt-3 mb-4">Película_categoria</h2>
-  <div style="margin-bottom: 15px;"><app-post-pelicula-categoria></app-post-pelicula-categoria></div>
+  <div *ngIf="isAdmin"  style="margin-bottom: 15px;"><app-post-pelicula-categoria></app-post-pelicula-categoria></div>
 
   <div *ngIf="formVisible" class="mb-4 card p-3 shadow-sm">
     <h5>{{ isEditing ? 'Editar Relación' : 'Nueva Relación' }}</h5>
@@ -40,14 +40,14 @@
         <tr>
           <th>Película</th>
           <th>Categoría</th>
-          <th>Acciones</th>
+          <th *ngIf="isAdmin" >Acciones</th>
         </tr>
       </thead>
       <tbody>
         <tr *ngFor="let rel of relaciones | paginate: { itemsPerPage: itemsPerPage, currentPage: page }">
           <td>{{ rel.film.title }}</td>
           <td>{{ rel.category.name }}</td>
-          <td class="text-center">
+          <td class="text-center"  *ngIf="isAdmin">
             <button class="btn btn-sm btn-warning me-2" (click)="showEditForm(rel)">✏️</button>
             <button class="btn btn-sm btn-danger" (click)="delete(rel.film_id, rel.category_id)">🗑️</button>
           </td>
