--- a/src/app/peliculas/peliculas.component.html
+++ b/src/app/peliculas/peliculas.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid actor-table-container">
     <h2 class="mt-3 mb-4">Lista de Películas</h2>
-    <div style="margin-bottom: 15px;"><app-post-pelicula></app-post-pelicula></div>
+    <div *ngIf="isAdmin"  style="margin-bottom: 15px;"><app-post-pelicula></app-post-pelicula></div>
     <!-- Formulario de crear/editar -->
     <div *ngIf="formVisible" class="mb-4 card p-3 shadow-sm">
       <h5>{{ isEditing ? 'Editar Película' : 'Nueva Película' }}</h5>
@@ -77,7 +77,7 @@
             <th>Año</th>
             <th>Duración</th>
             <th>Clasificación</th>
-            <th>Acciones</th>
+            <th *ngIf="isAdmin" >Acciones</th>
           </tr>
         </thead>
         <tbody>
@@ -87,7 +87,7 @@
             <td class="text-center">{{ pelicula.release_year }}</td>
             <td class="text-center">{{ pelicula.length }} min</td>
             <td class="text-center">{{ pelicula.rating }}</td>
-            <td class="text-center">
+            <td class="text-center"  *ngIf="isAdmin">
               <button class="btn btn-sm btn-warning me-2" (click)="showEditForm(pelicula.film_id)">✏️</button>
               <button class="btn btn-sm btn-danger" (click)="deletePelicula(pelicula.film_id)">🗑️</button>
             </td>
