--- a/src/app/rentas/rentas.component.html
+++ b/src/app/rentas/rentas.component.html
@@ -1,6 +1,7 @@
 <div class="container-fluid actor-table-container">
   <h2 class="mt-3 mb-4">Rentas</h2>
-  <div style="margin-bottom: 15px;"><app-post-rental></app-post-rental></div>
+
+  <div  *ngIf="isAdmin" style="margin-bottom: 15px;"><app-post-rental></app-post-rental></div>
 
   <div *ngIf="formVisible" class="mb-4 card p-3 shadow-sm">
     <h5>{{ isEditing ? 'Editar Renta' : 'Nueva Renta' }}</h5>
@@ -46,7 +47,7 @@
           <th>Inventario</th>
           <th>Fecha Renta</th>
           <th>Fecha Devolución</th>
-          <th>Acciones</th>
+          <th *ngIf="isAdmin">Acciones</th>
         </tr>
       </thead>
       <tbody>
@@ -56,7 +57,7 @@
           <td class="text-center">{{ renta.inventory_id }}</td>
           <td>{{ renta.rental_date | date: 'short' }}</td>
           <td>{{ renta.return_date | date: 'short' }}</td>
-          <td class="text-center">
+          <td class="text-center" *ngIf="isAdmin">
             <button class="btn btn-sm btn-warning me-2" (click)="showEditForm(renta.rental_id)">✏️</button>
             <button class="btn btn-sm btn-danger" (click)="delete(renta.rental_id)">🗑️</button>
           </td>
