--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -8,7 +8,7 @@
     <div class="sidebar">
         <!-- Sidebar Menu -->
         <nav class="mt-2">
-            <ul class="nav nav-pills nav-sidebar flex-column" role="menu">
+            <ul *ngIf="isAdmin || isClient || isGuest "  class="nav nav-pills nav-sidebar flex-column" role="menu">
                 <!-- Actores -->
                 <li class="nav-item">
                     <a href="crud/actors" class="nav-link">
@@ -18,7 +18,7 @@
                 </li>
 
                 <!-- Clientes -->
-                <li class="nav-item">
+                <li class="nav-item" *ngIf="isAdmin  || isGuest ">
                     <a href="crud/customers" class="nav-link">
                         <i class="nav-icon fas fa-users"></i>
                         <p>Clientes</p>
@@ -26,7 +26,7 @@
                 </li>
 
                 <!-- Películas -->
-                <li class="nav-item">
+                <li class="nav-item" *ngIf="isAdmin || isClient || isGuest ">
                     <a href="crud/films" class="nav-link">
                         <i class="nav-icon fas fa-film"></i>
                         <p>Películas</p>
@@ -34,7 +34,7 @@
                 </li>
 
                 <!-- Película-Actor -->
-                <li class="nav-item">
+                <li class="nav-item" *ngIf="isAdmin || isClient || isGuest ">
                     <a href="crud/film_actor" class="nav-link">
                         <i class="nav-icon fas fa-user-tag"></i>
                         <p>Película-Actor</p>
@@ -42,7 +42,7 @@
                 </li>
 
                 <!-- Película-Categoría -->
-                <li class="nav-item">
+                <li class="nav-item" *ngIf="isAdmin || isClient || isGuest ">
                     <a href="crud/film_category" class="nav-link">
                         <i class="nav-icon fas fa-list"></i>
                         <p>Película-Categoría</p>
@@ -50,7 +50,7 @@
                 </li>
 
                 <!-- Película-Texto -->
-                <li class="nav-item">
+                <li class="nav-item" *ngIf="isAdmin || isClient || isGuest ">
                     <a href="crud/film_text" class="nav-link">
                         <i class="nav-icon fas fa-file-alt"></i>
                         <p>Película-Texto</p>
@@ -58,7 +58,7 @@
                 </li>
 
                 <!-- Inventario -->
-                <li class="nav-item">
+                <li class="nav-item" *ngIf="isAdmin || isClient || isGuest ">
                     <a href="crud/inventories" class="nav-link">
                         <i class="nav-icon fas fa-box"></i>
                         <p>Inventario</p>
@@ -66,7 +66,7 @@
                 </li>
 
                 <!-- Pagos -->
-                <li class="nav-item">
+                <li class="nav-item" *ngIf="isAdmin  || isGuest ">
                     <a href="crud/payments" class="nav-link">
                         <i class="nav-icon fas fa-dollar-sign"></i>
                         <p>Pagos</p>
@@ -74,7 +74,7 @@
                 </li>
 
                 <!-- Renta -->
-                <li class="nav-item">
+                <li class="nav-item" *ngIf="isAdmin || isClient || isGuest ">
                     <a href="crud/rentals" class="nav-link">
                         <i class="nav-icon fas fa-receipt"></i>
                         <p>Renta</p>
@@ -82,49 +82,49 @@
                 </li>
 
                 <!-- Personal -->
-                <li class="nav-item">
+                <li class="nav-item" *ngIf="isAdmin  || isGuest ">
                     <a href="crud/staff" class="nav-link">
                         <i class="nav-icon fas fa-user-tie"></i>
                         <p>Personal</p>
                     </a>
                 </li>
                 <!-- Direcciones -->
-                <li class="nav-item">
+                <li class="nav-item" *ngIf="isAdmin  || isGuest ">
                     <a href="crud/adress" class="nav-link">
                         <i class="nav-icon fas fa-map-marker-alt"></i>
                         <p>Direcciones</p>
                     </a>
                 </li>
                 <!-- Categorias -->
-                <li class="nav-item">
+                <li class="nav-item" *ngIf="isAdmin || isClient || isGuest ">
                     <a href="crud/category" class="nav-link">
                         <i class="nav-icon fas fa-th"></i>
                         <p>Categorias</p>
                     </a>
                 </li>
                 <!-- Tiendas -->
-                <li class="nav-item">
+                <li class="nav-item" *ngIf="isAdmin  || isGuest ">
                     <a href="crud/store" class="nav-link">
                         <i class="nav-icon fas fa-store"></i>
                         <p>Tiendas</p>
                     </a>
                 </li>
                 <!-- Paises -->
-                <li class="nav-item">
+                <li class="nav-item" *ngIf="isAdmin  || isGuest ">
                     <a href="crud/country" class="nav-link">
                         <i class="nav-icon fas fa-globe-americas"></i>
                         <p>Paises</p>
                     </a>
                 </li>
                 <!-- Ciudades -->
-                <li class="nav-item">
+                <li class="nav-item" *ngIf="isAdmin  || isGuest ">
                     <a href="crud/city" class="nav-link">
                         <i class="nav-icon fas fa-city"></i>
                         <p>Ciudades</p>
                     </a>
                 </li>
                 <!-- Idiomas -->
-                <li class="nav-item">
+                <li class="nav-item" *ngIf="isAdmin || isClient || isGuest ">
                     <a href="crud/language" class="nav-link">
                         <i class="nav-icon fas fa-language"></i>
                         <p>Idiomas</p>
